<resources>
    <!-- Omat tekstit -->

    <!-- Pallon väri -->
    <string name="ball_color_title">Pallon väri</string>
    <string-array name="ball_color_list_titles">
        <item>Punainen</item>
        <item>Sininen</item>
        <item>Musta</item>
    </string-array>
    <string-array name="ball_color_list_values">
        <item>#ff0000</item>
        <item>#0000FF</item>
        <item>#000000</item>
    </string-array>

    <!-- Peitteen väri -->
    <string name="square_color_title">Peitteiden väri</string>
    <string-array name="square_color_list_titles">
        <item>Punainen</item>
        <item>Sininen</item>
        <item>Musta</item>
    </string-array>
    <string-array name="square_color_list_values">
        <item>#ff0000</item>
        <item>#0000FF</item>
        <item>#000000</item>
    </string-array>

    <!-- Peliaika -->
    <string name="gametime_title">Pelin kesto</string>
    <string-array name="gametime_list_titles">
        <item>30 s</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>3 min</item>
        <item>5 min</item>
        <item>10 min</item>
    </string-array>
    <string-array name="gametime_list_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
    </string-array>

    <!-- Pallon piilossaoloaika oikean painalluksen jälkeen -->
    <string name="ball_hidden_time_title">Pallon piilossaoloaika oikean painalluksen jälkeen</string>
    <string-array name="ball_hidden_time_list_titles">
        <item>1 s</item>
        <item>2 s</item>
        <item>3 s</item>
        <item>4 s</item>
        <item>5 s</item>
        <item>6 s</item>
        <item>7 s</item>
        <item>8 s</item>
        <item>9 s</item>
        <item>10 s</item>
    </string-array>
    <string-array name="ball_hidden_time_list_values">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
    </string-array>

    <!-- Pallon näkyvissäoloaika ennen peiteanimaation alkua -->
    <string name="ball_visible_time_title">Pallon näkyvissäoloaika ennen peiteanimaation alkua</string>
    <string-array name="ball_visible_time_list_titles">
        <item>1 s</item>
        <item>2 s</item>
        <item>3 s</item>
        <item>4 s</item>
        <item>5 s</item>
        <item>6 s</item>
        <item>7 s</item>
        <item>8 s</item>
        <item>9 s</item>
        <item>10 s</item>
    </string-array>
    <string-array name="ball_visible_time_list_values">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
    </string-array>

    <!-- Peiteanimaation kesto -->
    <string name="cover_animation_time_title">Peiteanimaation kesto</string>
    <string-array name="cover_animation_time_list_titles">
        <item>1 s</item>
        <item>2 s</item>
        <item>3 s</item>
        <item>4 s</item>
        <item>5 s</item>
        <item>6 s</item>
        <item>7 s</item>
        <item>8 s</item>
        <item>9 s</item>
        <item>10 s</item>
    </string-array>
    <string-array name="cover_animation_time_list_values">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
    </string-array>

    <!-- Tason muuttumiseen vaadittava piste-ero -->
    <string name="level_points_title">Tason muuttumiseen vaadittava piste-ero</string>
    <string-array name="level_points_list_titles">
        <item>+- 2</item>
        <item>+- 3</item>
        <item>+- 4</item>
        <item>+- 5</item>
        <item>+- 6</item>
        <item>+- 7</item>
        <item>+- 8</item>
        <item>+- 9</item>
        <item>+- 10</item>
    </string-array>
    <string-array name="level_points_list_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- Kannustinääni -->
    <string name="correct_sound_title">Kannustinääni</string>
    <string-array name="correct_sound_list_titles">
        <item>ei ääntä</item>
        <item>naksutin 1</item>
        <item>naksutin 2</item>
        <item>rapina</item>
        <item>good boy</item>
        <item>good girl</item>
    </string-array>
    <string-array name="correct_sound_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Kosketusalueen koko -->
    <string name="touch_area_title">Kosketusalueen koko verrattuna pallon kokoon</string>
    <string-array name="touch_area_list_titles">
        <item>1 x</item>
        <item>1,5 x</item>
        <item>2 x</item>
    </string-array>
    <string-array name="touch_area_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Pallon koko -->
    <string name="ball_size_title">Pallon koko</string>
    <string-array name="ball_size_list_titles">
        <item>150</item>
        <item>300</item>
        <item>400</item>
    </string-array>
    <string-array name="ball_size_list_values">
        <item>150</item>
        <item>300</item>
        <item>400</item>
    </string-array>

    <!-- Pienennä pallon kokoa -->
    <string name="reduce_size_title">Pienennä pallon kokoa 1. tason jälkeen?</string>
    <string-array name="reduce_size_list_titles">
        <item>Pienennä</item>
        <item>Älä pienennä</item>
    </string-array>
    <string-array name="reduce_size_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- Pallon ilmestymisääni -->
    <string name="ball_sound_title">Pallon ilmestymisääni</string>
    <string-array name="ball_sound_list_titles">
        <item>ei ääntä</item>
        <item>ping</item>
        <item>piip 1</item>
        <item>piip 2</item>
        <item>piip 3</item>
    </string-array>
    <string-array name="ball_sound_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- Musiikki -->
    <string name="music_title">Musiikki päällä?</string>
    <string-array name="music_list_titles">
        <item>Päällä</item>
        <item>Pois päältä</item>
    </string-array>
    <string-array name="music_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- Valmiita esimerkkitekstejä -->

    <string name="app_name">DogMemo</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="start_game">Aloita Peli</string>
    <string name="add_player">Lisää uusi pelaaja</string>
    <string name="radio_normaali">Normaali peli</string>
    <string name="radio_valinnainen">Harjoittelupeli</string>
    <string name="pelaajanNimi">Koiran nimi</string>
    <string name="omistajanNimi">Omistajan nimi</string>
    <string name="sukupuoli">Sukupuoli</string>
    <string name="rotu">Rotu</string>
    <string name="syntyma">Syntymäpäivä</string>
    <string name="tallenna">Tallenna pelaajaprofiili</string>
    <string name="narttu">narttu</string>
    <string name="uros">uros</string>
</resources>
