<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" /> -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" /> -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <!-- Pallon värin valitsin -->
    <ListPreference
        android:id="@+id/ball_color_chooser"
        android:defaultValue="#0000FF"
        android:entries="@array/ball_color_list_titles"
        android:entryValues="@array/ball_color_list_values"
        android:key="ball_color_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/ball_color_title" />
        <!-- android:entryValues="@array/pref_example_list_values" -->

    <!-- Peitteen värin valitsin -->
    <ListPreference
        android:id="@+id/square_color_chooser"
        android:defaultValue="#000000"
        android:entries="@array/square_color_list_titles"
        android:entryValues="@array/square_color_list_values"
        android:key="square_color_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/square_color_title" />

    <!-- Peliajan valitsin -->
    <ListPreference
        android:id="@+id/gametime_chooser"
        android:defaultValue="60"
        android:entries="@array/gametime_list_titles"
        android:entryValues="@array/gametime_list_values"
        android:key="gametime_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/gametime_title" />

    <!-- Pallon piilossaoloajan valitsin -->
    <ListPreference
        android:id="@+id/ball_hidden_time_chooser"
        android:defaultValue="2000"
        android:entries="@array/ball_hidden_time_list_titles"
        android:entryValues="@array/ball_hidden_time_list_values"
        android:key="ball_hidden_time_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/ball_hidden_time_title" />

    <!-- Pallon näkyvissäoloajan ennen peiteanimaation alkua valitsin -->
    <ListPreference
        android:id="@+id/ball_visible_time_chooser"
        android:defaultValue="2000"
        android:entries="@array/ball_visible_time_list_titles"
        android:entryValues="@array/ball_visible_time_list_values"
        android:key="ball_visible_time_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/ball_visible_time_title" />

    <!-- Peiteanimaation keston valitsin -->
    <ListPreference
        android:id="@+id/cover_animation_time_chooser"
        android:defaultValue="2000"
        android:entries="@array/cover_animation_time_list_titles"
        android:entryValues="@array/cover_animation_time_list_values"
        android:key="cover_animation_time_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/cover_animation_time_title" />

    <!-- Tason muuttumiseen vaadittava piste-ero -->
    <ListPreference
        android:id="@+id/level_points_chooser"
        android:defaultValue="5"
        android:entries="@array/level_points_list_titles"
        android:entryValues="@array/level_points_list_values"
        android:key="level_points_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/level_points_title" />

    <!-- Kannustinääni -->
    <ListPreference
        android:id="@+id/correct_sound_chooser"
        android:defaultValue="1"
        android:entries="@array/correct_sound_list_titles"
        android:entryValues="@array/correct_sound_list_values"
        android:key="correct_sound_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/correct_sound_title" />

    <!-- Kosketusalueen koko -->
    <ListPreference
        android:id="@+id/touch_area_chooser"
        android:defaultValue="1"
        android:entries="@array/touch_area_list_titles"
        android:entryValues="@array/touch_area_list_values"
        android:key="touch_area_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/touch_area_title" />

</PreferenceScreen>
