<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.teisko.dogmemo.NewPlayer"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/taytaTiedot"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="Täytä uuden pelaajan tiedot"
        tools:layout_editor_absoluteY="102dp"
        tools:layout_editor_absoluteX="130dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteY="180dp"
        tools:layout_editor_absoluteX="109dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteY="338dp"
        tools:layout_editor_absoluteX="109dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/tallenna"
        tools:layout_editor_absoluteY="580dp"
        tools:layout_editor_absoluteX="109dp" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:text="DogMemo"
        android:textSize="18dp"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="175dp" />

    <TextView
        android:id="@+id/textNimi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pelaajanNimi"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        tools:layout_editor_absoluteY="85dp"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotu"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        tools:layout_editor_absoluteY="279dp"
        tools:layout_editor_absoluteX="72dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syntyma"
        app:layout_constraintEnd_toStartOf="@+id/editText4"
        tools:layout_editor_absoluteY="321dp"
        tools:layout_editor_absoluteX="14dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteY="420dp"
        tools:layout_editor_absoluteX="109dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/omistajanNimi"
        tools:layout_editor_absoluteY="242dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sukupuoli"
        tools:layout_editor_absoluteY="437dp"
        tools:layout_editor_absoluteX="113dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteY="259dp"
        tools:layout_editor_absoluteX="109dp" />

    <RadioGroup
        android:id="@+id/rg_sukupuoli"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        tools:layout_editor_absoluteY="498dp"
        tools:layout_editor_absoluteX="182dp">

        <RadioButton
            android:id="@+id/rb_narttu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/narttu" />

        <RadioButton
            android:id="@+id/rb_uros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uros" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />
</android.support.constraint.ConstraintLayout>
